--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
 <header>
-    <img class="img-1" src="./images/logo1.png" alt="College logo">
+    <img class="img-1" src="./logo1.png" alt="College logo">
     <h1> Peace College</h1>
 </header>
 <nav class="navbar">
@@ -24,7 +24,7 @@
 <main>
     <section>
 <h2> About Us</h2>
-<img class="img-2" src="./images/img1.jpg" alt="School image">
+<img class="img-2" src="./img1.jpg" alt="School image">
 
 <p class="about-content">
     Welcome to Peace College, an institution dedicated to fostering excellence in education across various disciplines. Established with a vision to empower students with knowledge, skills, and values, we offer a diverse range of programs in science, arts, and commerce.
@@ -50,7 +50,7 @@
 <h3> Classes</h3>
 <P> We have well built facilities to accommodate your ward, Our College runs through Sciences, Arts and Humanities.</P>
 <br>
-<a href="./Gallery.html" > <img class="img-3" src="./images/img2.jpg" alt="Gallery img"> </a>
+<a href="./Gallery.html" > <img class="img-3" src="./img2.jpg" alt="Gallery img"> </a>
 <p> View more in our <a href="./Gallery.html"> Gallery</a></p>
 </section>
 </div>
